--- a/test/regression/test_comb_bits_primitives-help-for-review.org
+++ b/test/regression/test_comb_bits_primitives-help-for-review.org
@@ -6,18 +6,18 @@
 : 
 : === flags ===
 : 
-:   -bits MODULE            bits implementation to test: intbits, bits, bits-int,
-:                           raw-int, bad
-:   [-bits-ref MODULE]      reference bits implementation (default is [bits-int])
-:   [-first-error-only]     stop running a primitive test after first error
-:   [-iterations N]         number of test iterations (default is [10])
-:   [-log FILE]             results file (default is [stdout])
-:   [-max-bit-width N]      (default is 100)
-:   [-min-bit-width N]      (default is 1)
-:   [-primitives PRIM,...]  primitives to test: add, sub, mulu, muls, and, or,
-:                           xor, not, eq, lt, sel, mux, cat
-:   [-verbose]              print every test
-:   [-build-info]           print info about this build and exit
-:   [-version]              print the version of this build and exit
-:   [-help]                 print this help text and exit
-:                           (alias: -?)
+:   -bits MODULE               . bits implementation to test: intbits, bits,
+:                                bits-int, raw-int, bad
+:   [-bits-ref MODULE]         . reference bits implementation (default is
+:                                [bits-int])
+:   [-first-error-only]        . stop running a primitive test after first error
+:   [-iterations N]            . number of test iterations (default is [10])
+:   [-log FILE]                . results file (default is [stdout])
+:   [-max-bit-width N]         . (default is 100)
+:   [-min-bit-width N]         . (default is 1)
+:   [-primitives PRIM,...]     . primitives to test: add, sub, mulu, muls, and,
+:                                or, xor, not, eq, lt, sel, mux, cat
+:   [-verbose]                 . print every test
+:   [-build-info]              . print info about this build and exit
+:   [-version]                 . print the version of this build and exit
+:   [-help], -?                . print this help text and exit
