--- a/docs/accelerating_simulations.mdx
+++ b/docs/accelerating_simulations.mdx
@@ -1,7 +1,4 @@
----
-uuid: 1e88a449-912e-3457-91f8-b08e1f0ed98e
-title: High performance simulation backends
----
+# High performance simulation backends
 
 The default simulator shipped with Hardcaml is a cycle-accurate
 simulator implemented in OCaml. There are two other types of simulator
