--- a/docs/always.mdx
+++ b/docs/always.mdx
@@ -1,7 +1,4 @@
----
-title: Always DSL
-uuid: 77a88612-8b18-3290-41a2-84f75434e824
----
+# Always DSL
 
 The [`Always` DSL](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Always/index.html)
 is a DSL in Hardcaml that lets one describe circuits
