--- a/docs/circuits.mdx
+++ b/docs/circuits.mdx
@@ -1,7 +1,4 @@
----
-title: Circuits
-uuid: dc9bad60-93b1-3e00-aed8-139dbc2da9cd
----
+# Circuits
 
 A Hardcaml [`Circuit.t`](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Circuit/index.html)
 encodes both the RTL logic for a hardware
