--- a/docs/combinational_logic.mdx
+++ b/docs/combinational_logic.mdx
@@ -1,7 +1,4 @@
----
-title: Combinational logic and working with vectors
-uuid: c7e1f2e0-5606-347e-65e3-382d91c00c2f
----
+# Combinational logic and working with vectors
 
 Combinational logic is formed of boolean functions whose outputs are fully
 determined by their current inputs. This is in contrast to sequential logic
