--- a/docs/counter_example.mdx
+++ b/docs/counter_example.mdx
@@ -1,7 +1,4 @@
----
-title: Counter example design
-uuid: 7173c9ab-66c0-3eea-32c4-0fb788d7850e
----
+# Counter example design
 
 The following is a simple 8-bit counter. It resets back to 0 when the
 clear signal is high, and counts up when the incr signal is high.
