--- a/docs/fibonacci_example.mdx
+++ b/docs/fibonacci_example.mdx
@@ -1,7 +1,4 @@
----
-title: Computing Finonacci numbers
-uuid: 445561d5-fcf1-37e8-7643-0c6e0189edca
----
+# Computing Finonacci numbers
 
 In the following example we design a statemachine which computes the
 n-th Fibonacci number.
