--- a/docs/hardcaml_interfaces.mdx
+++ b/docs/hardcaml_interfaces.mdx
@@ -1,7 +1,4 @@
----
-title: Hardcaml Interfaces
-uuid: f97124f7-069b-32e1-d699-d81b87d34d3b
----
+# Hardcaml Interfaces
 
 Abstractly, Hardcaml
 [interfaces](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Interface/index.html)
