--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,7 +1,4 @@
----
-title: Hardcaml Documentation
-uuid: 3d86922f-5076-38b1-7293-7b9a4d89b468
----
+# Hardcaml Documentation
 
 Welcome to [Hardcaml](https://github.com/janestreet/hardcaml)!
 
