--- a/docs/installing_with_opam.mdx
+++ b/docs/installing_with_opam.mdx
@@ -1,7 +1,4 @@
----
-title: Installing the opensource release
-uuid: 5fc4ecaa-0279-37a4-f22d-73277649e821
----
+# Installing the opensource release
 
 Hardcaml can be installed with opam. I recommend the following
 packages to get started
