--- a/docs/instantiation.mdx
+++ b/docs/instantiation.mdx
@@ -1,7 +1,4 @@
----
-title: Instantiation
-uuid: f4593ef9-be16-306e-b76f-720dc5c061bf
----
+# Instantiation
 
 An [instantiation](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Instantiation/index.html)
 creates a placeholder for a named sub-circuit with
