--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,7 +1,4 @@
----
-title: Introduction
-uuid: 4f2a36a2-7df0-37d4-7695-81a1e2f6ed7a
----
+# Introduction
 
 Hardcaml is a library for designing and simulating *Register Transfer Level*
 (RTL) hardware designs. Hardcaml designs can be turned into Verilog or VHDL for
