--- a/docs/module_hierarchy.mdx
+++ b/docs/module_hierarchy.mdx
@@ -1,7 +1,4 @@
----
-title: Module Hierarchies
-uuid: f91e686c-452e-3009-465e-c14ac99c3d78
----
+# Module Hierarchies
 
 *Prerequisite: [Hardcaml interfaces](hardcaml_interfaces.mdx)*
 
