--- a/docs/naming.mdx
+++ b/docs/naming.mdx
@@ -1,7 +1,4 @@
----
-title: Naming
-uuid: c43f95bd-310f-32a6-19c6-3158c4441f9e
----
+# Naming
 
 Names pop up in a couple of places. Input and output ports of a
 circuit have names. Also, all internal nodes within a logic design
