--- a/docs/rtl_generation.mdx
+++ b/docs/rtl_generation.mdx
@@ -1,7 +1,4 @@
----
-title: RTL Generation
-uuid: 95751f4c-28dc-38d4-445e-c07c27e160bd
----
+# RTL Generation
 
 Hardcaml [`Circuit`s](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Circuit/index.html)
 can be [converted](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Rtl/index.html)
