--- a/docs/sequential_logic.mdx
+++ b/docs/sequential_logic.mdx
@@ -1,7 +1,4 @@
----
-title: Sequential Logic
-uuid: a7b1145b-f22e-343d-f4df-c564df972017
----
+# Sequential Logic
 
 Sequential logic is built from primitives such as `register`s and
 `memory`s.
