--- a/docs/serial_multiplier_example.mdx
+++ b/docs/serial_multiplier_example.mdx
@@ -1,7 +1,4 @@
----
-title: Serial multipler example
-uuid: 6ee57d03-6283-3f55-aa1d-980301b708d7
----
+# Serial multipler example
 
 We now show a complete example which implements a bit-serial unsigned
 multipler. We will both implement the design and show how to test it.
