--- a/docs/simulating_with_interfaces.mdx
+++ b/docs/simulating_with_interfaces.mdx
@@ -1,7 +1,4 @@
----
-title: Simulating with interfaces
-uuid: 256cce50-2166-3727-3beb-ab7d28d16a62
----
+# Simulating with interfaces
 
 With standard Hardcaml [simulations](simulation.mdx) we are forced to manage input and
 output ports manually using the
