--- a/docs/simulation.mdx
+++ b/docs/simulation.mdx
@@ -1,7 +1,4 @@
----
-title: Simulation
-uuid: 70fe5fd2-1da7-36c5-a0af-2a50d1b08f42
----
+# Simulation
 
 The simplest way to simulate a Hardcaml circuit is to use the
 [`Cyclesim`](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Cyclesim/index.html)
