--- a/docs/state_machine_always_api.mdx
+++ b/docs/state_machine_always_api.mdx
@@ -1,7 +1,4 @@
----
-title: Designing State Machines with the Always DSL
-uuid: 16db66d0-f5cb-3457-82c3-07088c26797c
----
+# Designing State Machines with the Always DSL
 
 # Writing State Machines
 
