--- a/docs/waveforms.mdx
+++ b/docs/waveforms.mdx
@@ -1,7 +1,4 @@
----
-title: Waveforms
-uuid: 37d1dde1-693e-36a9-1a6a-09548678c014
----
+# Waveforms
 
 In the [simple counter](counter_example.mdx) example we printed the
 value of the output ports during the simulation. Printing outputs or
