--- a/docs/waveterm_interactive_viewer.mdx
+++ b/docs/waveterm_interactive_viewer.mdx
@@ -1,7 +1,4 @@
----
-title: Waveterm Interactive Viewer
-uuid: 1f38c61f-c790-3c87-737e-c7f38b3fd27f
----
+# Waveterm Interactive Viewer
 
 Normally we write expect_tests which can output waveforms in ASCII
 when testing Hardcaml, but we can also use the interactive viewer tool
