--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -31,6 +31,7 @@ more complex hardware designs.
 * [Module hierarchies](module_hierarchy.mdx)
 * [Simulating with interfaces](simulating_with_interfaces.mdx)
 * [Writing state machines](state_machine_always_api.mdx)
+* [Enums in Hardcaml](enums.mdx)
 * [Interactive waveforms](waveterm_interactive_viewer.mdx)
 <!--
 * [Step testbenches](step_testbench.mdx)
