--- a/docs/state_machine_always_api.mdx
+++ b/docs/state_machine_always_api.mdx
@@ -249,6 +249,10 @@ let main (stream_a : stream) (stream_b : stream) =
   ]
 ;;
 ```
+```mdx-error
+Line 4, characters 9-12:
+Warning 26: unused variable bar.
+```
 
 The beauty in this approach is that the repetitive tedious
 hand-shaking code is replaced with a high order function call. On top
