--- a/docs/accelerating_simulations.mdx
+++ b/docs/accelerating_simulations.mdx
@@ -1,5 +1,12 @@
 # High performance simulation backends
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 The default simulator shipped with Hardcaml is a cycle-accurate
 simulator implemented in OCaml. There are two other types of simulator
 backends shipped with Hardcaml, available in the `hardcaml_c` and
