--- a/docs/combinational_logic.mdx
+++ b/docs/combinational_logic.mdx
@@ -1,5 +1,12 @@
 # Combinational logic and working with vectors
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 Combinational logic is formed of boolean functions whose outputs are fully
 determined by their current inputs. This is in contrast to sequential logic
 where the outputs are a function of their current and previous inputs.
