--- a/docs/counter_example.mdx
+++ b/docs/counter_example.mdx
@@ -1,5 +1,12 @@
 # Counter example design
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 The following is a simple 8-bit counter. It resets back to 0 when the
 clear signal is high, and counts up when the incr signal is high.
 Otherwise it holds its previous value.
