--- a/docs/enums.mdx
+++ b/docs/enums.mdx
@@ -1,5 +1,12 @@
 # Enums in Hardcaml
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 Hardcaml provides support for enumerations with a finite number of
 instances through the Enum module. An Enum type declares a finite (ie
 non-recursive) set of variants and requires a deriving specification
