--- a/docs/fibonacci_example.mdx
+++ b/docs/fibonacci_example.mdx
@@ -1,5 +1,12 @@
 # Computing Finonacci numbers
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 In the following example we design a statemachine which computes the
 n-th Fibonacci number.
 
