--- a/docs/hardcaml_interfaces.mdx
+++ b/docs/hardcaml_interfaces.mdx
@@ -1,5 +1,12 @@
 # Hardcaml Interfaces
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 Abstractly, Hardcaml
 [interfaces](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Interface/index.html)
 are made up of a polymorphic type and
