--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,5 +1,12 @@
 # Introduction
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 Hardcaml is a library for designing and simulating *Register Transfer Level*
 (RTL) hardware designs. Hardcaml designs can be turned into Verilog or VHDL for
 use with vendor synthesis and place and route tools.
