--- a/docs/module_hierarchy.mdx
+++ b/docs/module_hierarchy.mdx
@@ -1,5 +1,12 @@
 # Module Hierarchies
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 *Prerequisite: [Hardcaml interfaces](hardcaml_interfaces.mdx)*
 
 In Hardcaml, module
