--- a/docs/naming.mdx
+++ b/docs/naming.mdx
@@ -1,5 +1,12 @@
 # Naming
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 Names pop up in a couple of places. Input and output ports of a
 circuit have names. Also, all internal nodes within a logic design
 need to have some sort of name.
