--- a/docs/rtl_generation.mdx
+++ b/docs/rtl_generation.mdx
@@ -1,5 +1,12 @@
 # RTL Generation
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 Hardcaml [`Circuit`s](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Circuit/index.html)
 can be [converted](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Rtl/index.html)
 to either Verilog or VHDL.
