--- a/docs/sequential_logic.mdx
+++ b/docs/sequential_logic.mdx
@@ -1,5 +1,12 @@
 # Sequential Logic
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 Sequential logic is built from primitives such as `register`s and
 `memory`s.
 
