--- a/docs/serial_multiplier_example.mdx
+++ b/docs/serial_multiplier_example.mdx
@@ -1,5 +1,12 @@
 # Serial multipler example
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 We now show a complete example which implements a bit-serial unsigned
 multipler. We will both implement the design and show how to test it.
 
