--- a/docs/simulating_with_interfaces.mdx
+++ b/docs/simulating_with_interfaces.mdx
@@ -1,5 +1,12 @@
 # Simulating with interfaces
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 With standard Hardcaml [simulations](simulation.mdx) we are forced to manage input and
 output ports manually using the
 strings. [Interfaces](hardcaml_interfaces.mdx) allow us to automate
