--- a/docs/simulation.mdx
+++ b/docs/simulation.mdx
@@ -1,5 +1,12 @@
 # Simulation
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 The simplest way to simulate a Hardcaml circuit is to use the
 [`Cyclesim`](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Cyclesim/index.html)
 module.
