--- a/docs/state_machine_always_api.mdx
+++ b/docs/state_machine_always_api.mdx
@@ -1,5 +1,12 @@
 # Designing State Machines with the Always DSL
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 # Writing State Machines
 
 The [Always DSL](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Always/index.html)
