--- a/docs/waveforms.mdx
+++ b/docs/waveforms.mdx
@@ -1,5 +1,12 @@
 # Waveforms
 
+<!--
+```ocaml
+# Hardcaml.Caller_id.set_mode Disabled
+- : unit = ()
+```
+-->
+
 In the [simple counter](counter_example.mdx) example we printed the
 value of the output ports during the simulation. Printing outputs or
 even modelling the expected behaviour of a circuit dynamically is
