--- a/docs/combinational_logic.mdx
+++ b/docs/combinational_logic.mdx
@@ -24,7 +24,7 @@ not contain any cycles.
 
 # Vectors and widths
 
-The fundmental type in Hardcaml is a vector with a specified width. The width
+The fundamental type in Hardcaml is a vector with a specified width. The width
 can be one or more bits. There exists a special signal called `empty` which has
 zero width, but is rarely used and exists more for internal use.
 
