--- a/test/regression/test_comb_bits_primitives-help-for-review.org
+++ b/test/regression/test_comb_bits_primitives-help-for-review.org
@@ -6,8 +6,8 @@
 : 
 : === flags ===
 : 
-:   -bits MODULE               . bits implementation to test: intbits, bits,
-:                                bits-int, raw-int, bad
+:   -bits MODULE               . bits implementation to test: intlist, boollist,
+:                                xlist, bits, bits-old, raw-old, bad
 :   [-bits-ref MODULE]         . reference bits implementation (default is
 :                                [bits-int])
 :   [-first-error-only]        . stop running a primitive test after first error
